logs/dag_id=db_dg/run_id=scheduled__2024-01-03T000000+0000/task_id=insert_using_python_data/attempt=7.log
[2024-01-04T14:09:20.227+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: db_dg.insert_using_python_data scheduled__2024-01-03T00:00:00+00:00 [queued]>
[2024-01-04T14:09:20.238+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: db_dg.insert_using_python_data scheduled__2024-01-03T00:00:00+00:00 [queued]>
[2024-01-04T14:09:20.239+0000] {taskinstance.py:2171} INFO - Starting attempt 7 of 9
[2024-01-04T14:09:20.336+0000] {taskinstance.py:2192} INFO - Executing <Task(PythonOperator): insert_using_python_data> on 2024-01-03 00:00:00+00:00
[2024-01-04T14:09:20.340+0000] {standard_task_runner.py:60} INFO - Started process 973 to run task
[2024-01-04T14:09:20.343+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'db_dg', 'insert_using_python_data', 'scheduled__2024-01-03T00:00:00+00:00', '--job-id', '23', '--raw', '--subdir', 'DAGS_FOLDER/create_database_dag.py', '--cfg-path', '/tmp/tmpmr0glns6']
[2024-01-04T14:09:20.345+0000] {standard_task_runner.py:88} INFO - Job 23: Subtask insert_using_python_data
[2024-01-04T14:09:20.476+0000] {task_command.py:423} INFO - Running <TaskInstance: db_dg.insert_using_python_data scheduled__2024-01-03T00:00:00+00:00 [running]> on host 4a92eecc6669
[2024-01-04T14:09:20.628+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='prady1900' AIRFLOW_CTX_DAG_ID='db_dg' AIRFLOW_CTX_TASK_ID='insert_using_python_data' AIRFLOW_CTX_EXECUTION_DATE='2024-01-03T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='7' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-01-03T00:00:00+00:00'
[2024-01-04T14:09:20.646+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T14:09:20.804+0000] {base.py:83} INFO - Using connection ID 'postgres_connect' for task execution.
[2024-01-04T14:09:20.853+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/create_database_dag.py", line 54, in insert_data_postg
    cursor.execute(sql_stmt)
psycopg2.errors.SyntaxError: trailing junk after numeric literal at or near "287e"
LINE 1: ...p,resolve_time,category) Values (2,INC0000060,3,3,287ebd7da9...
                                                             ^

[2024-01-04T14:09:20.865+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=db_dg, task_id=insert_using_python_data, execution_date=20240103T000000, start_date=20240104T140920, end_date=20240104T140920
[2024-01-04T14:09:20.967+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 23 for task insert_using_python_data (trailing junk after numeric literal at or near "287e"
LINE 1: ...p,resolve_time,category) Values (2,INC0000060,3,3,287ebd7da9...
                                                             ^
; 973)
[2024-01-04T14:09:20.997+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-04T14:09:21.021+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
